--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "php": "^7.4 || ^8.0",
         "nette/utils": "^3.2",
         "psr/container": "^1.1|^2.0",
+        "symfony/deprecation-contracts": "^2.4",
         "symfony/service-contracts": "^2.4"
     },
     "require-dev": {
