--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "nette/utils": "^3.2",
         "psr/container": "^1.1|^2.0",
         "symfony/deprecation-contracts": "^2.4",
+        "symfony/polyfill-php80": "^1.22",
         "symfony/service-contracts": "^2.4"
     },
     "require-dev": {
