--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,7 +10,7 @@ parameters:
 
     ignoreErrors:
         - "#^Construct empty\\(\\) is not allowed. Use more strict comparison.$#"
-        - "#^Property Rade\\\\DI\\\\Config\\\\Loader\\\\FileLoader|ClosureLoader\\:\\:\\$container \\(Rade\\\\DI\\\\Container\\|Rade\\\\DI\\\\ContainerBuilder\\) does not accept Rade\\\\DI\\\\AbstractContainer.$#"
+        - "#^Property Rade\\\\DI\\\\Loader\\\\FileLoader|ClosureLoader\\:\\:\\$container \\(Rade\\\\DI\\\\Container\\|Rade\\\\DI\\\\ContainerBuilder\\) does not accept Rade\\\\DI\\\\AbstractContainer.$#"
         -
             message: "#^Parameter \\#2 \\$service \\(Rade\\\\DI\\\\Definition\\|Rade\\\\DI\\\\RawDefinition\\) of method Rade\\\\DI\\\\ContainerBuilder\\:\\:doCreate\\(\\) should be contravariant with parameter \\$service \\(callable\\(\\): mixed\\) of method Rade\\\\DI\\\\AbstractContainer\\:\\:doCreate\\(\\)$#"
             path: src/ContainerBuilder.php
@@ -34,4 +34,4 @@ parameters:
             path: src/Traits/ResolveTrait.php
         -
             message: "#^Variable \\$excludePattern might not be defined.$#"
-            path: src/Config/Loader/FileLoader.php
+            path: src/Loader/FileLoader.php
