--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,18 @@
 name: Tests
 on: [push, pull_request]
 
+env:
+  CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+
 jobs:
   build:
     strategy:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        php-versions: ['7.4', '8.0']
-        composer-flags: [""]
-        include:
-          - php-versions: "8.1"
-            composer-flags: "--ignore-platform-req=php"
-    runs-on: ubuntu-latest
+        php-versions: ['7.4', '8.0', '8.1']
+
+    runs-on: ${{ matrix.operating-system }}
 
     steps:
       - name: Checkout
@@ -40,15 +40,31 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer install --no-progress --optimize-autoloader ${{ matrix.composer-flags }}
+        run: |
+          composer_flags=""
+
+          if [ ${{ matrix.php-versions }} == 8.1 ] then
+             composer_flags="--ignore-platform-req=php"
+          fi
+
+          composer install --no-progress --optimize-autoloader $composer_flags
+
+      - name: Setup Code Climate test-reporter
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+          ./cc-test-reporter before-build
 
       - name: Check Coding Standard
         run: vendor/bin/phpcs
 
       - name: Test with Phpunit
+        run: vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+
+      - name: Upload Test Coverage
         run: |
-          vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
           bash <(curl -s https://codecov.io/bash) -f coverage.clover
+          ./cc-test-reporter after-build --coverage-input-type clover
 
       - name: Test with Phpstan
         run: vendor/bin/phpstan analyse
