--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
         run: |
           composer_flags=""
 
-          if [ ${{ matrix.php-versions }} == 8.1 ] then
-             composer_flags="--ignore-platform-req=php"
+          if [ ${{ matrix.php-versions }} == 8.1 ]; then
+              composer_flags="--ignore-platform-req=php"
           fi
 
           composer install --no-progress --optimize-autoloader $composer_flags
