--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
+        shell: bash
         run: |
           composer_flags=""
 
@@ -53,7 +54,7 @@ jobs:
         run: |
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
-          ./cc-test-reporter before-build
+          bash cc-test-reporter before-build
 
       - name: Check Coding Standard
         run: vendor/bin/phpcs
@@ -64,7 +65,7 @@ jobs:
       - name: Upload Test Coverage
         run: |
           bash <(curl -s https://codecov.io/bash) -f clover.xml
-          ./cc-test-reporter after-build --coverage-input-type clover
+          bash cc-test-reporter after-build --coverage-input-type clover
 
       - name: Test with Phpstan
         run: vendor/bin/phpstan analyse
