Fixed shell issues in Github Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
+        shell: bash
         run: |
           composer_flags=""
 
@@ -50,6 +51,7 @@ jobs:
           composer install --no-progress --optimize-autoloader $composer_flags
 
       - name: Setup Code Climate test-reporter
+        shell: bash
         run: |
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
@@ -62,6 +64,7 @@ jobs:
         run: vendor/bin/phpunit --coverage-clover=clover.xml
 
       - name: Upload Test Coverage
+        shell: bash
         run: |
           bash <(curl -s https://codecov.io/bash) -f clover.xml
           ./cc-test-reporter after-build --coverage-input-type clover
