--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           composer install --no-progress --optimize-autoloader $composer_flags
 
       - name: Setup Code Climate test-reporter
-        if: matrix.operating-system == ubuntu-latest
+        if: ${{ matrix.operating-system == 'ubuntu-latest' }}
         run: |
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
@@ -63,7 +63,7 @@ jobs:
         run: vendor/bin/phpunit --coverage-text --coverage-clover=clover.xml
 
       - name: Upload Test Coverage
-        if: matrix.operating-system == ubuntu-latest
+        if: ${{ matrix.operating-system == 'ubuntu-latest' }}
         run: |
           bash <(curl -s https://codecov.io/bash) -f clover.xml
           ./cc-test-reporter after-build --coverage-input-type clover
