--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
 
     steps:
+      - name: Set git to use LF on Windows
+        if: matrix.operating-system == 'windows-latest'
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -44,21 +50,22 @@ jobs:
           composer install --no-progress --optimize-autoloader $composer_flags
 
       - name: Setup Code Climate test-reporter
-        if: ${{ matrix.operating-system == 'ubuntu-latest' }} && ${{ matrix.php-versions == 8.0 }}
+        if: matrix.operating-system == 'ubuntu-latest' && matrix.php-versions == 8.0
         run: |
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
           ./cc-test-reporter before-build
 
       - name: Check Coding Standard
-        if: ${{ matrix.operating-system != 'windows-latest' }}
+        if: matrix.operating-system != 'windows-latest'
         run: vendor/bin/phpcs
 
       - name: Test with Phpunit
+        continue-on-error: ${{ matrix.php-versions == 8.1 }}
         run: vendor/bin/phpunit --coverage-text --coverage-clover=clover.xml
 
       - name: Upload Test Coverage
-        if: ${{ matrix.operating-system == 'ubuntu-latest' }}
+        if: matrix.operating-system == 'ubuntu-latest'
         run: |
           bash <(curl -s https://codecov.io/bash) -f clover.xml
           if [ ${{ matrix.php-versions == 8.0 }} ]; then ./cc-test-reporter after-build --coverage-input-type clover; fi;
