--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
       - name: Get Composer Cache Directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-      - uses: actions/cache@v2
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -57,7 +59,6 @@ jobs:
           ./cc-test-reporter before-build
 
       - name: Check Coding Standard
-        if: matrix.operating-system != 'windows-latest'
         run: vendor/bin/phpcs
 
       - name: Test with Phpunit
