--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,26 @@
 name: Tests
 on: [push, pull_request]
 
+env:
+  CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+
 jobs:
   build:
     strategy:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        php-versions: ['7.4', '8.0']
-        composer-flags: [""]
-        include:
-          - php-versions: "8.1"
-            composer-flags: "--ignore-platform-req=php"
-    runs-on: ubuntu-latest
+        php-versions: ['7.4', '8.0', '8.1']
+
+    runs-on: ${{ matrix.operating-system }}
 
     steps:
+      - name: Set git to use LF on Windows
+        if: matrix.operating-system == 'windows-latest'
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -26,29 +32,44 @@ jobs:
           coverage: xdebug
           tools: composer:v2
 
-      - name: Get composer cache directory
-        id: composercache
+      - name: Get Composer Cache Directory
+        id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Cache composer dependencies
         uses: actions/cache@v2
         with:
-          path: ${{ steps.composercache.outputs.dir }}
-          # Use composer.json for key, if composer.lock is not committed.
-          # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer install --no-progress --optimize-autoloader ${{ matrix.composer-flags }}
+        shell: bash
+        run: |
+          composer_flags=""
+          if [ ${{ matrix.php-versions }} == 8.1 ]; then composer_flags="--ignore-platform-req=php"; fi;
+
+          composer install --no-progress --optimize-autoloader $composer_flags
+
+      - name: Setup Code Climate test-reporter
+        if: matrix.operating-system == 'ubuntu-latest' && matrix.php-versions == 8.0
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+          ./cc-test-reporter before-build
 
       - name: Check Coding Standard
         run: vendor/bin/phpcs
 
       - name: Test with Phpunit
+        continue-on-error: ${{ matrix.php-versions == 8.1 }}
+        run: vendor/bin/phpunit --coverage-text --coverage-clover=clover.xml
+
+      - name: Upload Test Coverage
+        if: matrix.operating-system == 'ubuntu-latest'
         run: |
-          vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-          bash <(curl -s https://codecov.io/bash) -f coverage.clover
+          bash <(curl -s https://codecov.io/bash) -f clover.xml
+          if [ ${{ matrix.php-versions }} == 8.0 ]; then ./cc-test-reporter after-build --coverage-input-type clover; fi;
 
       - name: Test with Phpstan
         run: vendor/bin/phpstan analyse
