--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -18,7 +18,7 @@ parameters:
             message: "#^Rade\\\\DI\\\\ContainerBuilder\\:\\:__construct\\(\\) does not call parent constructor from Rade\\\\DI\\\\AbstractContainer.$#"
             path: src/ContainerBuilder.php
         -
-            message: "#^Parameter \\#1 \\$offset (string) of method Rade\\\\DI\\\\Container\\:\\:offset|Set|Get|Exists|Unset\\(\\) should be contravariant with parameter \\$offset (mixed) of method ArrayAccess<mixed,mixed>\\:\\:offset|Set|Get|Exists|Unset\\(\\)|Variable method call on \\$this\\(Rade\\\\DI\\\\Container\\).$#"
+            message: "#^Parameter \\#1 \\$offset (string) of method Rade\\\\DI\\\\Container\\:\\:offset|Set|Get|Exists|Unset\\(\\) should be contravariant with parameter \\$offset (mixed) of method ArrayAccess<mixed,mixed>\\:\\:offset|Set|Get|Exists|Unset\\(\\)|Variable method call on \\$this\\(Rade\\\\DI\\\\Container\\).|Call to function is_callable\\(\\) with mixed will always evaluate to false.$#"
             path: src/Container.php
         -
             message: '#^Invalid type Psr\\Container\\(NotFound|Container)ExceptionInterface to throw|Only booleans are allowed in a ternary operator condition, ReflectionType\|null given.$#'
