--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -39,5 +39,26 @@
                 <referencedClass name="Psr\Container\ContainerExceptionInterface"/>
             </errorLevel>
         </InvalidCatch>
+
+        <UndefinedMethod>
+            <errorLevel type="suppress">
+                <referencedMethod name="Rade\DI\Services\ServiceProviderInterface::getid"/>
+                <file name="src/Loader/YamlFileLoader.php"/>
+            </errorLevel>
+        </UndefinedMethod>
+
+        <PropertyNotSetInConstructor>
+            <errorLevel type="suppress">
+                <file name="src/Builder/CodePrinter.php"/>
+                <file name="src/Definition.php"/>
+                <referencedProperty name="Rade\DI\Loader\YamlFileLoader::$yamlParser" />
+            </errorLevel>
+        </PropertyNotSetInConstructor>
+
+        <PossiblyUndefinedStringArrayOffset>
+            <errorLevel type="suppress">
+                <file name="src/ContainerBuilder.php"/>
+            </errorLevel>
+        </PossiblyUndefinedStringArrayOffset>
     </issueHandlers>
 </psalm>
