--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,7 +10,7 @@ parameters:
 
     ignoreErrors:
         - "#^Construct empty\\(\\) is not allowed. Use more strict comparison|Call to an undefined method ReflectionMethod|ReflectionProperty\\:\\:getAttributes\\(\\).$#"
-        - "#^Property Rade\\\\DI\\\\Loader\\\\FileLoader|ClosureLoader\\:\\:\\$container \\(Rade\\\\DI\\\\Container\\|Rade\\\\DI\\\\ContainerBuilder\\) does not accept Rade\\\\DI\\\\AbstractContainer.$#"
+        - "#^Property Rade\\\\DI\\\\Loader\\\\FileLoader\\:\\:\\$container \\(Rade\\\\DI\\\\Container\\|Rade\\\\DI\\\\ContainerBuilder\\) does not accept Rade\\\\DI\\\\AbstractContainer.$#"
         -
             message: "#^Parameter \\#2 \\$service \\(Rade\\\\DI\\\\Definition\\|Rade\\\\DI\\\\RawDefinition\\) of method Rade\\\\DI\\\\ContainerBuilder\\:\\:doCreate\\(\\) should be contravariant with parameter \\$service \\(callable\\(\\): mixed\\) of method Rade\\\\DI\\\\AbstractContainer\\:\\:doCreate\\(\\)$#"
             path: src/ContainerBuilder.php
@@ -36,5 +36,8 @@ parameters:
             message: "#^Call to an undefined static method Rade\\\\DI\\\\Services\\\\ServiceProviderInterface\\:\\:getId\\(\\).$#"
             path: src/AbstractContainer.php
         -
-            message: "#^Variable \\$excludePattern might not be defined.$#"
+            message: "#^Variable \\$excludePattern might not be defined.|Call to function is_scalar\\(\\) with mixed will always evaluate to true.$#"
             path: src/Loader/FileLoader.php
+        -
+            message: "#^Instanceof between \\*NEVER\\* and Symfony\\\\Component\\\\Yaml\\\\Tag\\\\TaggedValue will always evaluate to false.$#"
+            path: src/Loader/YamlFileLoader.php
