--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "psr/container": "^1.1 || ^2.0",
         "symfony/deprecation-contracts": "^2.4",
         "symfony/polyfill-php80": "^1.23",
+        "symfony/polyfill-php81": "^1.23",
         "symfony/service-contracts": "^2.4"
     },
     "require-dev": {
