--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -22,5 +22,6 @@
     <rule ref="PSR12">
         <exclude name="PSR1.Classes.ClassDeclaration.MultipleClasses"/>
         <exclude name="PSR1.Methods.CamelCapsMethodName.NotCamelCaps"/> <!-- Affects FILE: src\ContainerBuilder.php -->
+        <exclude name="PSR2.Classes.PropertyDeclaration.Multiple"/>
     </rule>
 </ruleset>
