--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,9 @@
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpunit/phpunit": "^8.5 || ^9.5",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/config": "^5.3",
-        "symfony/yaml": "^5.3",
         "vimeo/psalm": "^4.9"
+        "symfony/config": "^5.3 || ^6.0",
+        "symfony/yaml": "^5.3 || ^6.0",
     },
     "autoload": {
         "psr-4": {
