--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,11 @@
             "@phpunit"
         ]
     },
+    "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": false
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
