--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,8 @@
 name: build
 on: [push, pull_request]
 
-env:
-  CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-
 jobs:
-  build:
+  tests:
     strategy:
       fail-fast: false
       matrix:
@@ -17,74 +14,68 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Set git to use LF on Windows
         if: matrix.operating-system == 'windows-latest'
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
 
-      - name: Checkout
-        uses: actions/checkout@v2
-
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, xml, ctype, iconv, curl
+          extensions: mbstring, xml, ctype, iconv, curl, fileinfo
           coverage: xdebug
-          tools: composer
+          tools: composer:v2
 
-      - name: Get Composer Cache Directory
-        id: composer-cache
+      - name: Get composer cache directory
+        id: composercache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Cache composer dependencies
         uses: actions/cache@v2
         with:
-          path: ${{ steps.composer-cache.outputs.dir }}
+          path: ${{ steps.composercache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        shell: bash
-        run: |
-          composer_flags=""
-          if [ ${{ matrix.php-versions }} == 8.1 ]; then composer_flags="--ignore-platform-req=php"; fi;
-
-          composer install --no-progress --optimize-autoloader $composer_flags
-
-      - name: Setup Code Climate test-reporter
-        if: matrix.operating-system == 'ubuntu-latest' && matrix.php-versions == 8.0
-        run: |
-          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-          chmod +x ./cc-test-reporter
-          ./cc-test-reporter before-build
-
-      - name: Check coding standards (PHP_CodeSniffer)
-        if: matrix.operating-system != 'macos-latest'
-        run: vendor/bin/phpcs
-
-      - name: "Benchmark Container for Performance"
-        if: matrix.operating-system == 'ubuntu-latest' && matrix.php-versions == 7.4
-        run: composer require phpbench/phpbench -W && vendor/bin/phpbench run --report default --revs 1000 && composer remove phpbench/phpbench
+        run: composer install --no-progress --optimize-autoloader
 
       - name: Run unit tests (PHPUnit)
-        continue-on-error: ${{ matrix.php-versions == 8.1 }}
-        run: vendor/bin/phpunit --coverage-text --coverage-clover=clover.xml
+        run: vendor/bin/phpunit --coverage-text --coverage-clover=clover.xml --group=required
 
-      - name: Publish coverage report to Codecov
-        if: matrix.operating-system == 'ubuntu-latest'
-        run: |
-          bash <(curl -s https://codecov.io/bash) -f clover.xml
-          if [ ${{ matrix.php-versions }} == 8.0 ]; then ./cc-test-reporter after-build --coverage-input-type clover; fi;
-
-      - name: "Statically analyze code (PHPStan)"
-        run: vendor/bin/phpstan analyse
-
-      - name: Statically analyze code (Psalm)
-        run: vendor/bin/psalm --output-format=github --taint-analysis --shepherd --report=build/logs/psalm.sarif
-
-      - name: "Upload security analysis results to GitHub"
-        uses: "github/codeql-action/upload-sarif@v1"
+      - name: "Upload coverage report to Codecov"
+        uses: codecov/codecov-action@v2
+        continue-on-error: true
         with:
-          sarif_file: "build/logs/psalm.sarif"
+          files: ./clover.xml
+
+      - name: "Upload coverage report to CodeClimate"
+        uses: paambaati/codeclimate-action@v3.0.0
+        continue-on-error: true
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+
+      - name: Check coding standards (PHP_CodeSniffer)
+        run: vendor/bin/phpcs
+
+      #- name: Statically analyze code (Phpstan)
+      #  run: vendor/bin/phpstan analyse
+
+      #- name: Statically analyze code (Psalm)
+      #  run: vendor/bin/psalm --output-format=github --taint-analysis --shepherd --report=build/logs/psalm.sarif
+
+      #- name: "Upload security analysis results to GitHub"
+      #  uses: "github/codeql-action/upload-sarif@v1"
+      #  with:
+      #    sarif_file: "build/logs/psalm.sarif"
+
+      - name: "Benchmark for Performance"
+        if: matrix.operating-system == 'windows-latest'
+        run: |
+          composer require phpbench/phpbench -W
+          vendor/bin/phpbench run --report=default --revs=1000 -l none
