Refactored phpunit test cases

--- a/tests/Fixtures/yaml/anonymous_service.yml
+++ b/tests/Fixtures/yaml/anonymous_service.yml
@@ -1,2 +1,2 @@
 services:
-    Foo: !statement { value: FooClass, args: [!statement Bar] }
+    Foo: !statement { value: FooClass, args: [!statement Bar, !tagged_locator foo] }
