--- a/tests/Fixtures/yaml/services_bindings.yml
+++ b/tests/Fixtures/yaml/services_bindings.yml
@@ -10,9 +10,12 @@ services:
         # autowire: true // This works if entity constructor's parameters doesn't contain any of entity and declared else where
         bind:
             - foo: [ ~ ]
-            - baz: !tagged { tag: bar, resolve: false }
+            - baz: [ !tagged { tag: bar, resolve: true } ]
             - $factory: [ 1, 2, 3, 4, 'value']
-            - !php/const Rade\DI\Definition::EXTRA_BIND: $service->create(null, $factory);
+
+        configure:
+            - [!php_literal { code: "$hello = '%?';", args: [!tagged bar] }, false]
+            - !php_literal "foreach ($hello as $serviceId => $value) { $service->fromTag($value, $serviceId); }"
 
     Rade\DI\Tests\Fixtures\Bar:
         entity: Rade\DI\Tests\Fixtures\Bar::create
