--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,20 +14,20 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
       - name: Set git to use LF on Windows
         if: matrix.operating-system == 'windows-latest'
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
 
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, xml, ctype, iconv, curl, fileinfo
+          extensions: mbstring, xml, ctype, iconv, curl
           coverage: xdebug
           tools: composer:v2
 
